@@ -1,3 +1,15 @@
+2013-03-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR1346: Filter out -j option to make
+	* Makefile.am:
+	(ICEDTEA_MAKE): Remove -j flag if present
+	as OpenJDK build chokes on it.
+	(ICEDTEA_ENV): Set JOBS to value of ${PARALLEL_JOBS}.
+	(icedtea): Use ICEDTEA_MAKE.
+	(icedtea-debug): Likewise.
+	(icedtea-boot): Likewise.
+	* NEWS: Updated.
+
 2013-03-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	Bump to OpenJDK b80.
